<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_ecu_launch</name>
  <version>0.1.0</version>
  <description>The package for meta-package for perception ECU launchers</description>

  <maintainer email="aohsato@gmail.com">Akihito OHSATO</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>perception_ecu_or_launch</exec_depend>
  <exec_depend>perception_ecu_calib_launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
